# ledger-fx

./: TODO.md  bot.py  clear-table.sh  flake.nix  main.py  pyproject.toml  query-website.sh  todo.md
src/: bot.py  cli.py  main.py  pricedb.py
src/ledger_fx/: __init__.py  __main__.py  cli.py  pricedb.py
src/ledger_fx/sources/: __init__.py  altinkaynak.py  base.py  ecb.py
src/sources/: __init__.py  altinkaynak.py
