[project]
name = "ledger-fx"
authors = [{ name = "O. C. Taskin", email = "octvs@posteo.de" }]
version = "0.1"
dependencies = ["pandas", "selenium", "lxml", "beautifulsoup4"]
description = "scraper to query gold prices from altinkaynak"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ledger-fx = "ledger_fx.__main__:main"
